@@ -481,12 +481,12 @@
                                       <object class="Combi_DRO" id="Combi_DRO_x">
                                         <property name="visible">True</property>
                                         <property name="tooltip_text" translatable="yes">Klick to toggle through the DRO modes</property>
+                                        <property name="font_size">28</property>
+                                        <property name="homed_color">#0000ffff0000</property>
+                                        <property name="unhomed_color">#ffff00000000</property>
+                                        <property name="abs_color">#00000000ffff</property>
                                         <property name="dtg_color">#ffffffff0000</property>
                                         <property name="rel_color">#000000000000</property>
-                                        <property name="abs_color">#00000000ffff</property>
-                                        <property name="homed_color">#0000ffff0000</property>
-                                        <property name="font_size">28</property>
-                                        <property name="unhomed_color">#ffff00000000</property>
                                         <signal name="system_changed" handler="on_Combi_DRO_system_changed"/>
                                         <signal name="units_changed" handler="on_Combi_DRO_units_changed"/>
                                         <signal name="clicked" handler="on_Combi_DRO_clicked"/>
@@ -499,13 +499,13 @@
                                       <object class="Combi_DRO" id="Combi_DRO_y">
                                         <property name="visible">True</property>
                                         <property name="tooltip_text" translatable="yes">Klick to toggle through the DRO modes</property>
+                                        <property name="font_size">28</property>
+                                        <property name="homed_color">#0000ffff0000</property>
+                                        <property name="unhomed_color">#ffff00000000</property>
+                                        <property name="abs_color">#00000000ffff</property>
+                                        <property name="joint_number">1</property>
                                         <property name="dtg_color">#ffffffff0000</property>
                                         <property name="rel_color">#000000000000</property>
-                                        <property name="abs_color">#00000000ffff</property>
-                                        <property name="homed_color">#0000ffff0000</property>
-                                        <property name="font_size">28</property>
-                                        <property name="unhomed_color">#ffff00000000</property>
-                                        <property name="joint_number">1</property>
                                         <signal name="clicked" handler="on_Combi_DRO_clicked"/>
                                       </object>
                                       <packing>
@@ -516,13 +516,13 @@
                                       <object class="Combi_DRO" id="Combi_DRO_z">
                                         <property name="visible">True</property>
                                         <property name="tooltip_text" translatable="yes">Klick to toggle through the DRO modes</property>
+                                        <property name="font_size">28</property>
+                                        <property name="homed_color">#0000ffff0000</property>
+                                        <property name="unhomed_color">#ffff00000000</property>
+                                        <property name="abs_color">#00000000ffff</property>
+                                        <property name="joint_number">2</property>
                                         <property name="dtg_color">#ffffffff0000</property>
                                         <property name="rel_color">#000000000000</property>
-                                        <property name="abs_color">#00000000ffff</property>
-                                        <property name="homed_color">#0000ffff0000</property>
-                                        <property name="font_size">28</property>
-                                        <property name="unhomed_color">#ffff00000000</property>
-                                        <property name="joint_number">2</property>
                                         <signal name="clicked" handler="on_Combi_DRO_clicked"/>
                                       </object>
                                       <packing>
@@ -533,13 +533,13 @@
                                       <object class="Combi_DRO" id="Combi_DRO_4">
                                         <property name="visible">True</property>
                                         <property name="tooltip_text" translatable="yes">Klick to toggle through the DRO modes</property>
+                                        <property name="font_size">28</property>
+                                        <property name="homed_color">#0000ffff0000</property>
+                                        <property name="unhomed_color">#ffff00000000</property>
+                                        <property name="abs_color">#00000000ffff</property>
+                                        <property name="joint_number">3</property>
                                         <property name="dtg_color">#ffffffff0000</property>
                                         <property name="rel_color">#000000000000</property>
-                                        <property name="abs_color">#00000000ffff</property>
-                                        <property name="homed_color">#0000ffff0000</property>
-                                        <property name="font_size">28</property>
-                                        <property name="unhomed_color">#ffff00000000</property>
-                                        <property name="joint_number">3</property>
                                         <signal name="clicked" handler="on_Combi_DRO_clicked"/>
                                       </object>
                                       <packing>
@@ -1769,27 +1769,27 @@
                                                       <object class="GtkHBox" id="hbox_spindle_bar">
                                                         <property name="visible">True</property>
                                                         <child>
-                                                          <object class="HAL_HBar" id="hal_hbar_spindle_feedback">
+                                                          <object class="HAL_HBar" id="spindle_feedback_bar">
                                                             <property name="visible">True</property>
                                                             <property name="tooltip_text" translatable="yes">The feedback spindle speed</property>
+                                                            <property name="z1_border">0.80000001192092896</property>
                                                             <property name="target_color">#0000ffff0000</property>
                                                             <property name="z0_color">#0000ffff0000</property>
-                                                            <property name="max">6000</property>
+                                                            <property name="z0_border">0.40000000596046448</property>
+                                                            <property name="text_template">%i</property>
                                                             <property name="target_value">-0.039999999105930328</property>
                                                             <property name="z1_color">#0000ffff0000</property>
                                                             <property name="bg_color">#bebebebebebe</property>
-                                                            <property name="z0_border">0.40000000596046448</property>
-                                                            <property name="z1_border">0.80000001192092896</property>
                                                             <property name="z2_color">#0000ffff0000</property>
-                                                            <property name="text_template">%i</property>
-                                                            <signal name="hal_pin_changed" handler="on_hal_hbar_spindle_feedback_hal_pin_changed"/>
+                                                            <property name="max">6000</property>
+                                                            <signal name="hal_pin_changed" handler="on_spindle_feedback_bar_hal_pin_changed"/>
                                                           </object>
                                                           <packing>
                                                             <property name="position">0</property>
                                                           </packing>
                                                         </child>
                                                         <child>
-                                                          <object class="HAL_LED" id="hal_led_spindle_at_speed">
+                                                          <object class="HAL_LED" id="spindle_at_speed_led">
                                                             <property name="visible">True</property>
                                                             <property name="tooltip_text" translatable="yes">Indicates if the spindle is at speed</property>
                                                             <property name="on_color">green</property>
